building.smylingsas.net/assets/css/components/_button-icons.scss
.header-nav-logo {
    width: 20px;
    height: 20px;
    color: var(--text-color);
    transition: color 0.3s ease;

    path {
        fill: none;
    }
}


@media (prefers-reduced-motion: reduce) {
    .header-nav-logo {
        transition: none;
    }
}


.header-nav-button,
.layout-button {
    background: none;
    border: none;
    padding: 0.5rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    text-decoration: none;
}


.layout-button {
    padding: 0.5rem 1rem;
    background: var(--primary-color);
    color: var(--text-color);
    border: 1px solid var(--border-color);
    border-radius: var(--default-border-radius);
    cursor: pointer;
}


.layout-button.active {
    background: var(--secondary-color);
}


.header-nav-button:hover {
    background-color: var(--hover-bg);
    border-radius: var(--default-border-radius);
}

